<resources>
    <string name="app_name">PDMAndro</string>
    <string name="action_settings">Settings</string>
    <string name="item_list_fragment_label">Item List</string>
    <string name="item_edit_fragment_label">Item Edit</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="item_list_fragment">Item list fragment</string>
    <string name="item_edit_fragment">Item edit fragment</string>
    <string name="name">Name</string>
    <string name="bloom_date">Bloom Date</string>
    <string name="hasFlowers">Has Flowers</string>
    <string name="location">Location</string>
    <string name="photo">Photo</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="log_out">Log out</string>
    <string name="delete_plant">Delete Plant</string>
    <string name="hasnt_flowers">No Flowers</string>
</resources>